--- a/src/add_markers/CMakeLists.txt
+++ b/src/add_markers/CMakeLists.txt
@@ -134,6 +134,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/add_markers_node.cpp)
 add_executable(add_markers src/add_markers.cpp)
+add_executable(add_markers_time_based src/add_markers_time_based.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -150,6 +151,7 @@ add_executable(add_markers src/add_markers.cpp)
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(add_markers ${catkin_LIBRARIES})
+target_link_libraries(add_markers_time_based ${catkin_LIBRARIES})
 
 #############
 ## Install ##
